- Propagação de alterações no tratamento de exceções da camada de negócios.
- Renomeação do resource bundle usado nas páginas xhtml de 'msg' para 'global'.

--- a/presentation-jsf/src/main/webapp/error.xhtml
+++ b/presentation-jsf/src/main/webapp/error.xhtml
@@ -11,7 +11,7 @@
                 <p:messages globalOnly="true" escape="false"/>
                 <h1 class="wellcome">Default Global Error Page</h1>
                 <div class="customExtraFooter">
-                    <h:button value="${msg['enter']}" outcome="/secure/dashboard" class="button"/>
+                    <h:button value="${global['enter']}" outcome="/secure/dashboard" class="button"/>
                 </div>
             </div>
             
