--- a/presentation-jsf/src/main/webapp/secure/dashboard.xhtml
+++ b/presentation-jsf/src/main/webapp/secure/dashboard.xhtml
@@ -6,7 +6,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
-        <title><h:outputText value="msg.main.title"/></title>
+        <title><h:outputText value="global.main.title"/></title>
         <link rel="stylesheet" href="${request.contextPath}/css/main.css"/>
         <link rel="stylesheet" href="${request.contextPath}/css/dashboard.css"/>
         <script type="text/javascript" src="${request.contextPath}/javascript/main.js"></script>
