--- a/presentation-jsf/src/main/webapp/index.xhtml
+++ b/presentation-jsf/src/main/webapp/index.xhtml
@@ -9,9 +9,9 @@
 
             <div class="inputPanelOffLogin">
                 <p:messages globalOnly="true" escape="false"/>
-                <h1 class="wellcome"><h:outputText value="${msg['landing.page.wellcome']}"/></h1>
+                <h1 class="wellcome"><h:outputText value="${global['landing.page.wellcome']}"/></h1>
                 <div class="customExtraFooter">
-                    <h:button value="${msg['enter']}" outcome="/secure/dashboard" class="button"/>
+                    <h:button value="${global['enter']}" outcome="/secure/dashboard" class="button"/>
                 </div>
             </div>
             
