--- a/presentation-jsf/src/main/webapp/login.xhtml
+++ b/presentation-jsf/src/main/webapp/login.xhtml
@@ -9,33 +9,33 @@
         <ui:define name="content">
             
             <div class="inputPanelOffLogin">
-                <h1 class="h1Center"><h:outputText value="#{msg['header.login']}"/></h1>
+                <h1 class="h1Center"><h:outputText value="#{global['header.login']}"/></h1>
                 <h:form>
                     <h:panelGrid class="panelGrid">
                         <p:messages globalOnly="true" escape="false"/>
 
-                        <h:outputLabel value="#{msg['email']}" for="email" class="label"/>
-                        <h:inputText id="email" value="#{login.email}" class="inputField" required="true" requiredMessage="#{msg['email']} #{msg['validation.error.required']}"/>
+                        <h:outputLabel value="#{global['email']}" for="email" class="label"/>
+                        <h:inputText id="email" value="#{login.email}" class="inputField" required="true" requiredMessage="#{global['email']} #{global['validation.error.required']}"/>
                         <h:message for="email" errorClass="errorMessage" warnClass="warn" infoClass="info"></h:message>
 
-                        <h:outputLabel value="#{msg['password']}" for="password" class="label"/>
-                        <h:inputSecret id="password" value="#{login.password}" class="inputField" required="true" requiredMessage="#{msg['password']} #{msg['validation.error.required']}"/>
+                        <h:outputLabel value="#{global['password']}" for="password" class="label"/>
+                        <h:inputSecret id="password" value="#{login.password}" class="inputField" required="true" requiredMessage="#{global['password']} #{global['validation.error.required']}"/>
                         <h:message for="password" errorClass="errorMessage" warnClass="warn" infoClass="info"></h:message>
 
                         <br/>
-                        <h:commandButton action="#{login.execute()}" value="#{msg['login']}" class="button" style="float: right"/>
+                        <h:commandButton action="#{login.execute()}" value="#{global['login']}" class="button" style="float: right"/>
 
                     </h:panelGrid>
                 </h:form>
 
                 <div class="customExtraFooter">
-                    <div class="plainText"><h:outputText value="#{msg['question.dont.have.account']}"/></div>
+                    <div class="plainText"><h:outputText value="#{global['question.dont.have.account']}"/></div>
                     <br/>
-                    <h:button value="#{msg['new.account']}" outcome="register" class="button"/>
+                    <h:button value="#{global['new.account']}" outcome="register" class="button"/>
 
                     <br/><br/><br/><br/>
 
-                    <h:link value="#{msg['question.forgot.password']}" outcome="passwordRecover" class="undecLink tinyText"/>
+                    <h:link value="#{global['question.forgot.password']}" outcome="passwordRecover" class="undecLink tinyText"/>
                 </div>                    
             </div>
             
