--- a/presentation-jsf/src/main/webapp/passwordReset.xhtml
+++ b/presentation-jsf/src/main/webapp/passwordReset.xhtml
@@ -15,30 +15,30 @@
         <ui:define name="content">
             
         <div class="inputPanelOffLogin">
-            <h1 class="h1Center"><h:outputText value="#{msg['header.password.reset']}"/></h1>
-            <h4><h:outputText value="#{msg['header.orientations']}"/></h4>
-            <p class="plainText"><h:outputText value="#{msg['orientation.text.password.reset']}"/></p>
+            <h1 class="h1Center"><h:outputText value="#{global['header.password.reset']}"/></h1>
+            <h4><h:outputText value="#{global['header.orientations']}"/></h4>
+            <p class="plainText"><h:outputText value="#{global['orientation.text.password.reset']}"/></p>
             <br/>
 
             <p:messages globalOnly="true" escape="false"/>
 
             <h:form>
-                <h:outputLabel value="#{msg['email']}" for="email" class="label"/>
+                <h:outputLabel value="#{global['email']}" for="email" class="label"/>
                 <h:inputText readonly="true" id="email" value="#{passwordReset.email}" class="inputField" required="true"/>
                 
                 <f:event listener="#{passwordReset.validatePasswordEquality}" type="postValidate" />
 
-                <h:outputLabel value="#{msg['password']}" for="password" class="label"/>
-                <h:inputSecret id="password" value="#{passwordReset.password}" class="inputField" required="true" requiredMessage="#{msg['password']} #{msg['validation.error.required']}"/>
+                <h:outputLabel value="#{global['password']}" for="password" class="label"/>
+                <h:inputSecret id="password" value="#{passwordReset.password}" class="inputField" required="true" requiredMessage="#{global['password']} #{global['validation.error.required']}"/>
                 <h:message for="password" errorClass="errorMessage" warnClass="warn" infoClass="info"/>
 
-                <h:outputLabel value="#{msg['passwordConfirmation']}" for="passwordConfirmation" class="label"/>
-                <h:inputSecret id="passwordConfirmation" value="#{passwordReset.passwordConfirmation}" class="inputField" required="true" requiredMessage="#{msg['passwordConfirmation']} #{msg['validation.error.required']}"/>
+                <h:outputLabel value="#{global['passwordConfirmation']}" for="passwordConfirmation" class="label"/>
+                <h:inputSecret id="passwordConfirmation" value="#{passwordReset.passwordConfirmation}" class="inputField" required="true" requiredMessage="#{global['passwordConfirmation']} #{global['validation.error.required']}"/>
                 <h:message for="passwordConfirmation" errorClass="errorMessage" warnClass="warn" infoClass="info"/>
 
                 <br/><br/>
                 <h:inputHidden value="#{passwordReset.windowToken}"/>
-                <h:commandButton action="#{passwordReset.execute()}" value="#{msg['reset']}" class="button" style="float: right"/>
+                <h:commandButton action="#{passwordReset.execute()}" value="#{global['reset']}" class="button" style="float: right"/>
 
             </h:form>
         </div>
